# research-cluster-job-system

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  VERSION
.claude/: settings.json  solve-overrides.md
.claude/skills/check-consistency/: SKILL.md
.claude/skills/check-drift/: SKILL.md
.claude/skills/translate-docs/: SKILL.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: auth.rs  client.rs  config.rs  display.rs  job_ids.rs  logs.rs  main.rs
ctl/: Cargo.toml
ctl/src/: config.rs  db.rs  k8s.rs  main.rs
ctl/src/cmd/: cli_common.rs  cli_deploy.rs  cli_list.rs  cli_remove.rs  cli_set_latest.rs  cluster.rs  config_show.rs  counters.rs  db_migrate.rs  jobs.rs  logs.rs  mod.rs  usage.rs  user.rs  weight.rs
ctl/src/cmd/cli/: deploy.rs  list.rs  mod.rs  remove.rs  set_latest.rs
ctl/src/cmd/config/: dump.rs  mod.rs  set.rs
ctl/src/cmd/system/: logs.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
docs/: auth_policy.md  build.md  deployment.md  git_conventions.md  migration.md  operations.md  system_architecture.md  testing.md  user_guide.md  versioning.md
docs/architecture/: api.md  cjobctl.md  cli.md  database.md  dispatcher.md  implementation.md  kueue.md  monitoring.md  performance.md  prerequisites.md  requirements.md  resources.md  roadmap.md  system_design.md  watcher.md
docs/migration/: unreleased.md  v1.10.0.md  v1.11.0.md  v1.12.0.md  v1.13.0.md  v1.14.0.md  v1.15.0.md
docs_en/: auth_policy.md  build.md  deployment.md  git_conventions.md  migration.md  operations.md  system_architecture.md  testing.md  user_guide.md  versioning.md
docs_en/architecture/: api.md  cjobctl.md  cli.md  database.md  dispatcher.md  kueue.md  monitoring.md  performance.md  prerequisites.md  requirements.md  resources.md  roadmap.md  system_design.md  watcher.md
docs_en/migration/: unreleased.md  v1.10.0.md  v1.11.0.md  v1.12.0.md  v1.13.0.md  v1.14.0.md  v1.15.0.md
k8s/base/: configmap-cjob-config.yaml  configmap-postgres-schema.yaml  kustomization.yaml  namespace.yaml  networkpolicy-allow-metrics-scrape.yaml  networkpolicy-allow-submit-api.yaml  pvc-cli-binary.yaml  rbac-dispatcher.yaml  rbac-prometheus.yaml  rbac-submit-api.yaml  secret-postgres.yaml
k8s/base/dispatcher/: deployment.yaml
k8s/base/grafana/: dashboard-user.json
k8s/base/postgres/: statefulset.yaml
k8s/base/prometheus-operator/: kustomization.yaml  podmonitor-dispatcher.yaml
k8s/base/submit-api/: deployment.yaml  servicemonitor.yaml
k8s/base/watcher/: deployment.yaml  podmonitor.yaml
k8s/overlay-example/: configmap-cjob-config.yaml  kustomization.yaml
k8s/overlays/stg/: kustomization.yaml
scripts/: sync-version.sh
server/: Dockerfile.api  Dockerfile.dispatcher  Dockerfile.watcher  pyproject.toml
server/src/cjob/: config.py  db.py  metrics.py  models.py  resource_utils.py
server/src/cjob/api/: app.py  auth.py  routes.py  schemas.py  services.py
server/src/cjob/dispatcher/: k8s_job.py  main.py  scheduler.py
server/src/cjob/watcher/: main.py  node_sync.py  quota_sync.py  reconciler.py  resource_quota_sync.py
server/tests/: conftest.py  test_auth.py  test_build_k8s_job.py  test_cli_endpoints.py  test_cluster_totals.py  test_determine_status.py  test_gap_filling.py  test_integration_scheduler.py  test_node_bin_packing.py  test_node_sync.py  test_quota_sync.py  test_reconciler.py  test_resource_quota_sync.py  test_resource_utils.py  test_scheduler.py  test_services.py
