[package]
name = "cjobctl"
version = "1.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
k8s-openapi = { version = "0.24", features = ["v1_30"] }
kube = { version = "0.98", features = ["client", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
semver = "1"
toml = "0.8"
