[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cjob"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "kubernetes>=29.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.hatch.build.targets.wheel]
packages = ["src/cjob"]
