[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cjob"
version = "1.11.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "kubernetes>=29.0",
    "packaging>=23.0",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/cjob"]
